--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -94,7 +94,7 @@
     "new_recording": "تسجيل جديد",
     "errors": {
       "tts_not_supported": "خاصية تحويل النص إلى كلام غير مدعومة في هذا المتصفح.",
-      "tts_failed": "فشلت قراءة النص بصوت عالٍ. يرجى المحاولة مرة أخرى.",
+      "tts_failed": "فشلت قراءة النص بصوت عالٍ. ",
       "copy_failed": "فشل نسخ النص. يرجى المحاولة مرة أخرى."
     },
     "success": {
