prepare for demo

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -9,12 +9,11 @@
       "description": "ركز على الحروف التي تريد التواصل بها وانتظر حتى يقوم النظام بمعالجة أفكارك"
     },
     "eeg": {
-      "title": "وضع EEG"
+      "title": "تحسين الدقة"
     }
   },
   "instructions": {
     "title": "كيفية الاستخدام",
-    "alternative": "أو استخدم خياراً آخر",
     "manual": {
       "title": "وضع التسجيل اليدوي",
       "steps": {
@@ -25,14 +24,14 @@
         "5": "استمع إلى النص المُنشأ أو شاركه"
       }
     },
-    "eeg": {
-      "title": "وضع EEG",
+   "eeg": {
+      "title": "تحسين الدقة",
       "steps": {
-        "1": "انقر على \"تدريب رمز البدء\" أولاً",
-        "2": "اتبع إرشادات التدريب (5 خطوات)",
-        "3": "قم بتنفيذ الرمز المُدرب عليه لبدء التسجيل",
-        "4": "فكر في رسالتك، ثم كرر الرمز للتوقف",
-        "5": "سيقوم النظام تلقائياً بمعالجة النتيجة"
+        "1": "تخيل نطق الحرف المعروض على الشاشة لمدة 10 ثوانٍ",
+        "2": "استرح لمدة 10 ثوانٍ لتصفية ذهنك.",
+        "3": "كرر الخطوتين 1 و2 حتى يتم عرض جميع الأحرف الـ 31",
+        "4": "انتظر حتى ينتهي النموذج من التدريب",
+        "5": "ابدأ في تسجيل كلمات جديدة"
       }
     }
   },
@@ -43,33 +42,26 @@
     "get_ready": "استعد"
   },
   "training": {
-    "title": "تعيين رمز البدء الخاص بك",
-    "description": "ستحتاج إلى تنفيذ إجراء البدء الفريد لمدة 10 ثوانٍ. يمكن أن يكون:",
-    "options": {
-      "1": "تخيل قول \"ابدأ\"",
-      "2": "فكر في قبض قبضتك اليمنى",
-      "3": "تصور رفع يدك اليسرى",
-      "4": "أي فعل ذهني متناسق"
-    },
-    "instruction": "ستستمر جلسة التفكير 10 ثوانٍ. ابق مركزاً !",
-    "start_button": "بدء التدريب",
+    "title": "إضافة تسجيلات EEG جديدة",
+    "description": "لتحسين دقة توقع الكلمات، يمكنك إضافة تسجيلات EEG جديدة إلى النظام.",
+    "instruction": "ستقوم بإجراء جلسة التفكير لكل حرف لمدة 10 ثواني. ستكون هناك فترة راحة لمدة 10 ثوانٍ بين الحروف لتصفية ذهنك. حافظ على تركيزك وكن ثابتًا!",
+    "start_button": "ابدأ التسجيل",
     "complete": {
       "title": "اكتمل التدريب!",
-      "description": "تم تدريب رمز البدء الخاص بك. النظام يراقب الآن رمز البدء الخاص بك."
-    },
-    "active": {
-      "title": "وضع EEG نشط",
-      "description": "قم بتنفيذ رمز البدء المُدرب عليه لبدء التسجيل تلقائياً."
+      "description": "تم حفظ التسجيلات. سيكون لدى النظام الآن توقعات محسّنة."
     },
     "progress": {
-      "title": "قم بتنفيذ رمز البدء الآن",
+      "title": "قم بأداء الحرف المعروض الآن",
       "countdown": "استمر في التركيز لمدة {{count}} ثانية أخرى",
-      "processing": "معالجة بيانات التدريب الخاصة بك..."
+      "processing": "جارٍ معالجة بيانات تدريبك..."
     }
   },
   "recording": {
     "get_ready": "استعد للتركيز...",
+    "get_ready_rest": "فترة راحة",
+    "focus_instruction_rest": "اصفي ذهنك واستعد للحرف التالي",
     "focus_instruction": "ركز على كل حرف لمدة ثانيتين بالضبط",
+    "focus_instruction_10": "ركز على كل حرف لمدة عشر ثوانٍ بالضبط",
     "letters_recorded": "لقد سجلت {{count}} حرفاً حتى الآن"
   },
   "status": {
@@ -106,6 +98,7 @@
       "generated_text": "النص المُنشأ من إشارات EEG",
       "read_button": "قراءة النص بصوت عالٍ",
       "stop_button": "إيقاف القراءة",
+      "corrected_text":"النص المصحح",
       "copy_button": "نسخ النص إلى الحافظة",
       "share_button": "مشاركة النص",
       "new_recording_button": "بدء تسجيل جديد"
